<resources>
    <string name="app_name">MP01SeoulCulture</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_login">로그인</string>
    <string name="btn_signup">회원가입</string>
    <string name="btn_unlogin">둘러보기</string>
    <string name="btn_photo">사진선택</string>
    <string name="btn_favorit">즐겨찾기에 추가하기</string>
    <string name="btn_delete">회원탈퇴</string>
    <string name="tv_simplelogin">간편 회원가입/로그인</string>
    <string name="tv_unlog">회원전용 기능입니다.</string>
    <string name="et_id">아이디</string>
    <string name="et_pass1">비밀번호</string>
    <string name="et_pass2">비밀번호확인</string>
    <string name="et_email">이메일</string>
    <string name="et_search">검색어입력</string>
    <string name="menu_home">메인</string>
    <string name="menu_favorit">즐겨찾기</string>
    <string name="menu_review">리뷰</string>
    <string name="menu_reviewedit">리뷰작성하기</string>
    <string name="menu_map">지도보기</string>
    <string name="item_favorit">좋아한 행사</string>
    <string name="item_review">리뷰 보기</string>
    <string name="logout">로그아웃</string>
    <string name="profile_edit">프로필 사진 변경</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="item_title">행사이름</string>
    <string name="item_codename">행사장르</string>
    <string name="item_addr">행사주소</string>
    <string name="item_district">행사구</string>
    <string name="item_during">행사기간</string>
    <string name="item_program">프로그램소개</string>
    <string name="item_fee">행사요금 0000원</string>
    <string name="item_link">http://www.naver.com</string>
    <string name="item_fav">좋아요</string>
    <string name="item_back">메인으로</string>
    <string name="item_ok">추가됨</string>
    <string name="item_cancel">추가안됨</string>
    <string name="review_title">블로그제목</string>
    <string name="review_postdate">포스팅날짜</string>
    <string name="review_description">포스팅요약</string>
    <string name="review_bloggername">블로거이름</string>
    <string name="review_link">블로그링크</string>
    <string name="review_place">장소평가</string>
    <string name="review_instrument">시설평가</string>
    <string name="review_content">내용평가</string>
    <string name="review_save">저장 및 게시하기</string>
    <string name="review_short">간단리뷰</string>
    <string name="review_add">리뷰쓰러가기</string>


</resources>