<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ContentDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/appbar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextAppearance="@font/mclassic"
            android:textAlignment="gravity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mp_400">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mp_800"
                android:src="@drawable/profile03"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mclassic"
                android:text="@string/item_title"
                android:textSize="20sp"
                android:padding="8dp"
                android:textColor="@color/mp_800"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_during"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mclassic"
                android:text="@string/item_during"
                android:background="@color/mp_600"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mp_800"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/tv_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mclassic"
                android:text="@string/item_district"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mp_800"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/tv_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mclassic"
                android:text="@string/item_addr"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mp_800"
                android:background="@color/mp_600"
                android:textStyle="normal"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mclassic"
                android:text="@string/item_program"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mp_800"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/tv_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mclassic"
                android:text="@string/item_link"
                android:autoLink="web"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mp_800"
                android:background="@color/mp_600"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/tv_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mclassic"
                android:text="@string/item_fee"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mp_800"
                android:textStyle="normal"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/toggle_button_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_toggle"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintBaseline_toBaselineOf="@id/btn_toggle"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="@font/mclassic"
                    android:textColor="@color/mp_800"
                    android:text="@string/btn_favorit"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>
                <ToggleButton
                    android:id="@+id/btn_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textOn="@string/item_ok"
                    android:textOff="@string/item_cancel"
                    android:textColor="@color/mp_400"
                    android:backgroundTint="@color/color_select_menu"
                    android:fontFamily="@font/mclassic"
                    android:text="@string/item_ok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/toggle_button_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>