<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mp_400"
    tools:context=".activities.IntroActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/layout_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_login"
            android:fontFamily="@font/mclassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_signup"
            android:text="@string/btn_signup"
            android:fontFamily="@font/mclassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_unlogin"
            android:text="@string/btn_unlogin"
            android:fontFamily="@font/mclassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_simplelogin"
        android:text="@string/tv_simplelogin"
        android:fontFamily="@font/mclassic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_btns"
        android:layout_marginTop="16dp"
        android:textColor="@color/mp_800"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/layout_simplebtns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_simplelogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@drawable/bg_simplelogin">
        <ImageView
            android:id="@+id/img_kakao"
            android:src="@drawable/icon_kakako"
            android:layout_marginRight="16dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <ImageView
            android:id="@+id/img_naver"
            android:src="@drawable/icon_naver"
            android:layout_marginRight="16dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <ImageView
            android:id="@+id/img_google"
            android:src="@drawable/icon_google"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>

</RelativeLayout>