<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mp_400"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:id="@+id/shell_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            app:civ_border_color="@color/mp_red"
            app:civ_border_width="2dp"
            android:src="@drawable/profile01"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="12"
                android:textColor="@color/mp_800"
                android:textSize="16sp"
                android:fontFamily="@font/mclassic"
                android:hint="@string/et_id"
                android:background="@color/mp_600"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pass"
                android:inputType="textPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="12"
                android:textColor="@color/mp_800"
                android:textSize="16sp"
                android:fontFamily="@font/mclassic"
                android:hint="@string/et_pass1"
                android:background="@color/mp_600"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@id/btn_login"
            android:backgroundTint="@color/mp_800"
            android:text="@string/btn_login"
            android:fontFamily="@font/mclassic"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>